<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAdvert">

    <EditText
        android:id="@+id/phoneTxt"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/dateTxt"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTxt"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/locationTxt"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/descriptionTxt"
        android:layout_width="386dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTxt"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="24dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="78dp"
        android:layout_height="22dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:text="@string/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt"
        app:layout_constraintVertical_bias="0.745" />

    <ToggleButton
        android:id="@+id/lostFoundToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/lost"
        android:textOff="@string/lost"
        android:textOn="@string/found"
        app:layout_constraintBottom_toTopOf="@+id/nameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/button"
        android:layout_width="94dp"
        android:layout_height="54dp"
        android:onClick="backClick"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toEndOf="@+id/saveBtn"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/uploadImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt"
        app:layout_constraintVertical_bias="0.89" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="128dp"
        android:layout_height="94dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/uploadImageBtn"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt"
        app:layout_constraintVertical_bias="0.728"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintBottom_toTopOf="@+id/categorySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>